src/files/snapshots/copy_images_rust__files__file__tests__copy_files_with_progress_handles_errors.snap
---
source: src/files/file.rs
expression: result
---
[
    FileCopyResult {
        from: "file1.txt",
        to: "file1.txt",
        status: Ok,
        message: None,
    },
    FileCopyResult {
        from: "file2.txt",
        to: "file2.txt",
        status: Ok,
        message: None,
    },
    FileCopyResult {
        from: "not-existing.txt",
        to: "not-existing.txt",
        status: Error,
        message: Some(
            "No such file or directory (os error 2)",
        ),
    },
]
