src/files/snapshots/copy_images_rust__files__file__tests__display_of_file_info-2.snap
---
source: src/files/file.rs
expression: file_info_2.to_string()
---
"/some/path/some_file_1.txt (created on 2019-06-03 16:43:00)"
