src/files/snapshots/copy_images_rust__files__file__tests__display_of_file_info.snap
---
source: src/files/file.rs
expression: file_info_1.to_string()
---
"/some/path/some_file.txt (created on 2019-03-17 16:43:00)"
